# openvpn3-gui

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.ui  openvpnmgmt.cpp  vpncontroller.cpp
.github/workflows/: build.yml  lin-build.yml  mac-build.yml  win-build.yml
deploy/: iitdelhivpn.icns  openvpn3-gui.desktop
forms/: certificatebox.ui  connectingscreen.ui  connectscreen.ui  disconnectscreen.ui  downloadscreen.ui  generateprogress.ui  getstarted.ui  mainwindow.ui  statuswidget.ui  userinfo.ui  validitytimeline.ui
headers/: LinuxVpnBackend.h  certificateboxwidget.h  certificatedownloadservice.h  connectionlogsdialog.h  connectionprogresswidget.h  custommessagebox.h  generateprogresswidget.h  ikeystore.h  ivpnbackend.h  linuxkeystore.h  linuxvpnbackend.h  mackeystore.h  mainwindow.h  openvpnmgmt.h  statuswidget.h  systemtraymanager.h  thememanager.h  trafficgraphwidget.h  userinfowidget.h  validitytimelinewidget.h  vpncontroller.h  windowskeystore.h  windowsvpnbackend.h  winmacvpnbackend.h
resources/: resources.qrc
src/: LinuxVpnBackend.cpp  certificateboxwidget.cpp  certificatedownloadservice.cpp  connectionlogsdialog.cpp  connectionprogresswidget.cpp  generateprogresswidget.cpp  linuxkeystore.cpp  linuxvpnbackend.cpp  mackeystore.cpp  main.cpp  mainwindow.cpp  openvpnmgmt.cpp  statuswidget.cpp  systemtraymanager.cpp  thememanager.cpp  trafficgraphwidget.cpp  userinfowidget.cpp  validitytimelinewidget.cpp  vpncontroller.cpp  windowskeystore.cpp  windowsvpnbackend.cpp  winmacvpnbackend.cpp
